@@ -990,6 +990,14 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
+DECL|field|WAIT_DOWN_STATES_TIMEOUT_SECONDS
+specifier|static
+specifier|final
+name|int
+name|WAIT_DOWN_STATES_TIMEOUT_SECONDS
+init|=
+literal|60
+decl_stmt|;
 DECL|field|SKIP_AUTO_RECOVERY
 specifier|private
 specifier|final
@@ -3563,14 +3571,14 @@ operator|.
 name|getCollections
 argument_list|()
 decl_stmt|;
-name|List
+name|Set
 argument_list|<
 name|String
 argument_list|>
-name|updatedNodes
+name|updatedCoreNodeNames
 init|=
 operator|new
-name|ArrayList
+name|HashSet
 argument_list|<>
 argument_list|()
 decl_stmt|;
@@ -3749,18 +3757,14 @@ name|getName
 argument_list|()
 argument_list|)
 decl_stmt|;
-name|updatedNodes
+name|updatedCoreNodeNames
 operator|.
 name|add
 argument_list|(
 name|replica
 operator|.
-name|getStr
-argument_list|(
-name|ZkStateReader
-operator|.
-name|CORE_NAME_PROP
-argument_list|)
+name|getName
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|overseerJobQueue
@@ -3799,7 +3803,7 @@ name|NANOSECONDS
 operator|.
 name|convert
 argument_list|(
-literal|60
+name|WAIT_DOWN_STATES_TIMEOUT_SECONDS
 argument_list|,
 name|TimeUnit
 operator|.
@@ -3905,18 +3909,14 @@ operator|.
 name|DOWN
 condition|)
 block|{
-name|updatedNodes
+name|updatedCoreNodeNames
 operator|.
 name|remove
 argument_list|(
 name|replica
 operator|.
-name|getStr
-argument_list|(
-name|ZkStateReader
-operator|.
-name|CORE_NAME_PROP
-argument_list|)
+name|getName
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
@@ -3925,7 +3925,7 @@ block|}
 block|}
 if|if
 condition|(
-name|updatedNodes
+name|updatedCoreNodeNames
 operator|.
 name|size
 argument_list|()
