@@ -52,7 +52,67 @@ name|common
 operator|.
 name|cloud
 operator|.
+name|ClusterState
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|cloud
+operator|.
+name|DocCollection
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|cloud
+operator|.
+name|DocRouter
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|cloud
+operator|.
 name|Replica
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|cloud
+operator|.
+name|Slice
 import|;
 end_import
 begin_import
@@ -297,6 +357,17 @@ operator|.
 name|util
 operator|.
 name|Map
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|TimeUnit
 import|;
 end_import
 begin_class
@@ -1358,6 +1429,7 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
+comment|/*   Test that:   1) LIR state to 'down' is not set unless publishing node is a leader     1a) Test that leader can publish when LIR node already exists in zk     1b) Test that leader can publish when LIR node does not exist - TODO   2) LIR state to 'active' or 'recovery' can be set regardless of whether publishing     node is leader or not - TODO    */
 DECL|method|testEnsureReplicaInLeaderInitiatedRecovery
 specifier|public
 name|void
@@ -1637,7 +1709,483 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
-comment|/*   Test that:   1) LIR state to 'down' is not set unless publishing node is a leader     1a) Test that leader can publish when LIR node already exists in zk     1b) Test that leader can publish when LIR node does not exist   2) LIR state to 'active' or 'recovery' can be set regardless of whether publishing     node is leader or not    */
+DECL|method|testPublishAndWaitForDownStates
+specifier|public
+name|void
+name|testPublishAndWaitForDownStates
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+name|zkDir
+init|=
+name|createTempDir
+argument_list|(
+literal|"testPublishAndWaitForDownStates"
+argument_list|)
+operator|.
+name|toFile
+argument_list|()
+operator|.
+name|getAbsolutePath
+argument_list|()
+decl_stmt|;
+name|CoreContainer
+name|cc
+init|=
+literal|null
+decl_stmt|;
+name|ZkTestServer
+name|server
+init|=
+operator|new
+name|ZkTestServer
+argument_list|(
+name|zkDir
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|server
+operator|.
+name|run
+argument_list|()
+expr_stmt|;
+name|AbstractZkTestCase
+operator|.
+name|tryCleanSolrZkNode
+argument_list|(
+name|server
+operator|.
+name|getZkHost
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|AbstractZkTestCase
+operator|.
+name|makeSolrZkNode
+argument_list|(
+name|server
+operator|.
+name|getZkHost
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|cc
+operator|=
+name|getCoreContainer
+argument_list|()
+expr_stmt|;
+name|ZkController
+name|zkController
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|CloudConfig
+name|cloudConfig
+init|=
+operator|new
+name|CloudConfig
+operator|.
+name|CloudConfigBuilder
+argument_list|(
+literal|"127.0.0.1"
+argument_list|,
+literal|8983
+argument_list|,
+literal|"solr"
+argument_list|)
+operator|.
+name|build
+argument_list|()
+decl_stmt|;
+name|zkController
+operator|=
+operator|new
+name|ZkController
+argument_list|(
+name|cc
+argument_list|,
+name|server
+operator|.
+name|getZkAddress
+argument_list|()
+argument_list|,
+name|TIMEOUT
+argument_list|,
+name|cloudConfig
+argument_list|,
+operator|new
+name|CurrentCoreDescriptorProvider
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|List
+argument_list|<
+name|CoreDescriptor
+argument_list|>
+name|getCurrentDescriptors
+parameter_list|()
+block|{
+comment|// do nothing
+return|return
+literal|null
+return|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|DocCollection
+argument_list|>
+name|collectionStates
+init|=
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|Replica
+argument_list|>
+name|replicas
+init|=
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|()
+decl_stmt|;
+comment|// add two replicas with the same core name but one of them should be on a different node
+comment|// than this ZkController instance
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|1
+init|;
+name|i
+operator|<=
+literal|2
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Replica
+name|r
+init|=
+operator|new
+name|Replica
+argument_list|(
+literal|"core_node"
+operator|+
+name|i
+argument_list|,
+name|map
+argument_list|(
+name|ZkStateReader
+operator|.
+name|STATE_PROP
+argument_list|,
+name|i
+operator|==
+literal|1
+condition|?
+literal|"active"
+else|:
+literal|"down"
+argument_list|,
+name|ZkStateReader
+operator|.
+name|NODE_NAME_PROP
+argument_list|,
+name|i
+operator|==
+literal|1
+condition|?
+literal|"127.0.0.1:8983_solr"
+else|:
+literal|"non_existent_host"
+argument_list|,
+name|ZkStateReader
+operator|.
+name|CORE_NAME_PROP
+argument_list|,
+literal|"collection1"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|replicas
+operator|.
+name|put
+argument_list|(
+literal|"core_node"
+operator|+
+name|i
+argument_list|,
+name|r
+argument_list|)
+expr_stmt|;
+block|}
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|sliceProps
+init|=
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|sliceProps
+operator|.
+name|put
+argument_list|(
+literal|"state"
+argument_list|,
+name|Slice
+operator|.
+name|State
+operator|.
+name|ACTIVE
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Slice
+name|slice
+init|=
+operator|new
+name|Slice
+argument_list|(
+literal|"shard1"
+argument_list|,
+name|replicas
+argument_list|,
+name|sliceProps
+argument_list|)
+decl_stmt|;
+name|DocCollection
+name|c
+init|=
+operator|new
+name|DocCollection
+argument_list|(
+literal|"testPublishAndWaitForDownStates"
+argument_list|,
+name|map
+argument_list|(
+literal|"shard1"
+argument_list|,
+name|slice
+argument_list|)
+argument_list|,
+name|Collections
+operator|.
+name|emptyMap
+argument_list|()
+argument_list|,
+name|DocRouter
+operator|.
+name|DEFAULT
+argument_list|)
+decl_stmt|;
+name|ClusterState
+name|state
+init|=
+operator|new
+name|ClusterState
+argument_list|(
+literal|0
+argument_list|,
+name|Collections
+operator|.
+name|emptySet
+argument_list|()
+argument_list|,
+name|map
+argument_list|(
+literal|"testPublishAndWaitForDownStates"
+argument_list|,
+name|c
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|byte
+index|[]
+name|bytes
+init|=
+name|ZkStateReader
+operator|.
+name|toJSON
+argument_list|(
+name|state
+argument_list|)
+decl_stmt|;
+name|zkController
+operator|.
+name|getZkClient
+argument_list|()
+operator|.
+name|makePath
+argument_list|(
+name|ZkStateReader
+operator|.
+name|getCollectionPath
+argument_list|(
+literal|"testPublishAndWaitForDownStates"
+argument_list|)
+argument_list|,
+name|bytes
+argument_list|,
+name|CreateMode
+operator|.
+name|PERSISTENT
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|zkController
+operator|.
+name|getZkStateReader
+argument_list|()
+operator|.
+name|updateClusterState
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|zkController
+operator|.
+name|getZkStateReader
+argument_list|()
+operator|.
+name|getClusterState
+argument_list|()
+operator|.
+name|hasCollection
+argument_list|(
+literal|"testPublishAndWaitForDownStates"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|zkController
+operator|.
+name|getZkStateReader
+argument_list|()
+operator|.
+name|getClusterState
+argument_list|()
+operator|.
+name|getCollection
+argument_list|(
+literal|"testPublishAndWaitForDownStates"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|long
+name|now
+init|=
+name|System
+operator|.
+name|nanoTime
+argument_list|()
+decl_stmt|;
+name|long
+name|timeout
+init|=
+name|now
+operator|+
+name|TimeUnit
+operator|.
+name|NANOSECONDS
+operator|.
+name|convert
+argument_list|(
+name|ZkController
+operator|.
+name|WAIT_DOWN_STATES_TIMEOUT_SECONDS
+argument_list|,
+name|TimeUnit
+operator|.
+name|SECONDS
+argument_list|)
+decl_stmt|;
+name|zkController
+operator|.
+name|publishAndWaitForDownStates
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"The ZkController.publishAndWaitForDownStates should have timed out but it didn't"
+argument_list|,
+name|System
+operator|.
+name|nanoTime
+argument_list|()
+operator|>=
+name|timeout
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|zkController
+operator|!=
+literal|null
+condition|)
+name|zkController
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|cc
+operator|!=
+literal|null
+condition|)
+block|{
+name|cc
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+name|server
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 DECL|method|getCoreContainer
 specifier|private
 name|CoreContainer
